一旦もとに戻す

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "vulture-example-langchain-pandas-dataframe-agent"
+name = "chatalysis"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
