--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-community==0.3.24",
     "langchain-experimental==0.3.4",
     "matplotlib==3.10.3",
+    "japanize-matplotlib==1.1.3",       # 日本語フォント対応
     "seaborn==0.13.2",
     "plotly==6.1.1",    
     "tabulate==0.9.0",
