--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ dependencies = [
     "streamlit==1.45.1",
     "pandas==2.2.3",
     "langchain==0.3.25",
-    "langchain-community==0.3.24",
+    "langchain-community==0.3.25",
     "langchain-experimental==0.3.4",
+    "langchain-ollama==0.3.3",
     "matplotlib==3.10.3",
     "japanize-matplotlib==1.1.3",       # 日本語フォント対応
     "seaborn==0.13.2",
